--- a/main_prog.css
+++ b/main_prog.css
@@ -1,6 +1,28 @@
 @charset "utf-8";
 /* CSS Document */
 
+#option_bar_top {
+	background-color:#EBEBEB;
+	position:absolute;
+	top:0px;
+	left:0px;
+	width:100%;
+	height:24px;
+}
+#option_bar_top_text {
+	position:absolute;
+	top:4px;
+	left:0px;
+	width:100%;
+	height:20px;
+}
+butt.button:hover {
+	border-style:solid;
+	border-width:1px;
+	background-color:#0CF;
+	cursor:pointer;
+}
+
 #text_ar_1
 {
 font-size:90%;
